--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "nuxt-app",
-  "version": "25.03.00",
+  "name": "nuxt-web",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "nuxt build",
     "dev": "nuxt dev --host",
-    "generate": "nuxt generate",
+    "build": "nuxt build",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxt/image": "^1.11.0",
     "@pinia/nuxt": "^0.10.1",
-    "nuxt": "^3.16.0",
+    "axios": "^1.8.4",
+    "mitt": "^3.0.1",
     "pinia": "^3.0.1",
+    "sass-embedded": "^1.89.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "nuxt": "^3.17.5"
   }
 }
